# openOrbit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fleet.db  pyproject.toml
.github/: copilot-instructions.md
docs/: api-reference.md  architecture.md  auth.md  cli.md  configuration.md  deployment.md  development.md  examples.md  index.md  inference.md  normalization.md  quickstart.md  setup.md  testing.md  usage.md
fleet/: README.md
project/: .env.example  .gitignore  README.md  pyproject.toml
project/src/openorbit/: auth.py  cli_db.py  config.py  db.py  main.py  scheduler.py  schema.sql
project/src/openorbit/api/: __init__.py  health.py
project/src/openorbit/api/v1/: __init__.py  auth.py  evidence.py  launches.py  sources.py
project/src/openorbit/cli/: __init__.py
project/src/openorbit/middleware/: __init__.py  rate_limiter.py
project/src/openorbit/models/: api.py  db.py
project/src/openorbit/pipeline/: __init__.py  notam_parser.py
project/src/openorbit/scrapers/: __init__.py  arianespace_official.py  base.py  celestrak.py  cnsa_official.py  commercial.py  esa_official.py  isro_official.py  jaxa_official.py  notams.py  public_feed.py  space_agency.py  spacex_official.py
project/tests/: conftest.py  test_api_launches.py  test_auth.py  test_ci_workflow.py  test_classifier.py  test_cli_db.py  test_config.py  test_coverage_base.py  test_coverage_main.py  test_coverage_sources.py  test_db_schema.py  test_docker_files.py  test_evidence_api.py  test_inference.py  test_normalizer.py  test_notam_parser.py  test_rate_limiter.py  test_scraper_news.py  test_scrapers_base.py  test_scrapers_bluesky.py  test_scrapers_notams.py  test_scrapers_spacex_official.py
scripts/: build-context-brief.sh  fleet-splash.py  fleet-status.sh  fleet-viz.py  fleet-viz_cypher.py  generate-audit.sh  init-state.sh
state/: agent-log.ndjson  backlog.md  backlog.md.new  decisions.md  goal.md  progress.md  retrospective.md  schema.sql  sprint.md
tests/: conftest.py  test_admin_api.py  test_api_launches.py  (+20 more)
(+75 files in other folders)
